--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/easymock-3.4(1).jar"/>
 	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/JUnitParams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/selenium-server-standalone-3.12.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
