--- a/test/uiTest/selenium/properties/configuration.properties
+++ b/test/uiTest/selenium/properties/configuration.properties
@@ -1,2 +1,4 @@
-sAppUrl=http://adactin.com/HotelApp/
-sharedUiMap=./sharedUiMap/sharedUiMap.properties
+webBrowser=webdriver.firefox.marionette
+webDriverLocation=C:\\GeckoSelenium\\geckodriver.exe
+appUrl=http://localhost:8080/ParkingManagement/index.jsp
+sharedUiMap=/test/uiTest.selenium/properties/SharedUIMap.properties
