Login selenium Test

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -4,6 +4,8 @@
 Index_Username_txt = login_username
 Index_Password_txt = login_password
 Index_Error_text = login_errorMessage
+Index_Error_password = password_errorMessage
+Index_login_button = login_button
 
 # Referenced by XPath Locator
 Index_Register = html/body/a
@@ -549,7 +551,7 @@ StudentFaculty_Logout_link = html/body/a[5]
 
 # Referenced by Id Locator
 StudentFaculty_viewReservation_link = viewReservationsForm
-StudentFaculty_ancelReservation_link = cancelreservationForm
+StudentFaculty_cancelReservation_link = cancelreservationForm
 
 ############### view_avail_spot.jsp Elements #########
 # Referenced by XPath Locator
