Object oriented principle to make code maintainable

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -337,6 +337,7 @@ Parkingarea_update_btn = update
 Parkingarea_updateeerror_txt = updateerror
 Parkingarea_edit_btn = edit
 
+
 ################ payment.jsp Elements #########
 
 # Referenced by XPath Locator
@@ -540,6 +541,11 @@ SearchParkingSpot_selectedhistory_checkbox = selectedhistory
 SearchParkingSpot_totalcost_txt = totalcost
 SearchParkingSpot_search_btn = search
 SearchParkingSpot_reset_btn = reset
+SearchParkingSpot_radioButton1 = radioButton1
+SearchParkingSpot_radioButton2 = radioButton2
+SearchParkingSpot_radioButton3 = radioButton3
+SearchParkingSpot_radioButton4 = radioButton4
+SearchParkingSpot_reserveButton_btn = reserveButton
 
 ############### student_faculty.jsp Elements #########
 # Referenced by XPath Locator
