SearchUser for Admin - Done, Manager - in progress

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -72,6 +72,17 @@ Admin_RevokeUser_link = html/body/a[3]
 Admin_ActivateUser_link = html/body/a[4]
 Admin_Logout_link = html/body/a[5] 
 
+################ manager.jsp Elements #########
+
+# Referenced by XPath Locator
+Manager_MyProfile_link = html/body/a[1]
+Manage_ViewAvailableSpaces_link = html/body/a[2]
+Manager_ViewSpotDetails_link = html/body/a[3]
+Manager_SearchUser_link = html/body/a[4]
+Manager_ModifyDeleteReservation_link = html/body/a[5] 
+Manager_AddModifyParkingArea_link = html/body/a[6] 
+Manager_Logout_link = html/body/a[7] 
+
 ################ cancelmyreservation.jsp Elements #########
 
 # Referenced by XPath Locator
@@ -503,6 +514,12 @@ SearchSpecificUser_editRole_btn = edituserrole
 SearchSpecificUser_setNoShow_btn = setnoshow
 SearchSpecificUser_setOverdue_btn = setoverdue
 SearchSpecificUser_editViolations_btn = editviolations
+SearchSpecificUser_editViolations_noShow_txt = no_shows
+SearchSpecificUser_editViolations_overdue_txt = overdue
+SearchSpecificUser_editViolationsSubmit_btn = update
+SearchSpecificUser_selectUserRole = userroles
+SearchSpecificUser_changeUserRole_btn = change
+ 
 
 ################ searchUser_results.jsp Elements #########
 # Referenced by XPath Locator
