Fixed SearchUser Function for Manager

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -509,7 +509,7 @@ SearchSpecificUser_permitId_txt = permitId
 SearchSpecificUser_type_txt = type
 SearchSpecificUser_carPlateNumber_txt = num
 SearchSpecificUser_noShows_txt = noshows
-SearchSpecificUser_overdue_txt = overdue
+SearchSpecificUser_overdue_txt = overdues
 SearchSpecificUser_editRole_btn = edituserrole
 SearchSpecificUser_setNoShow_btn = setnoshow
 SearchSpecificUser_setOverdue_btn = setoverdue
