Selenium end to end reserve parking test

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -433,7 +433,8 @@ ReservationStatus_confirmation_txt= confirmation
 
 ################ rservationconfirmed.jsp Elements #########
 # Referenced by XPath Locator
-ReservationConfirmed_Logout_link = html/body/table[1]/tbody/tr/td/a
+ReservationConfirmed_Home_link = html/body/table/tbody/tr/td[1]/a
+ReservationConfirmed_Logout_link = html/body/table/tbody/tr/td[2]/a
 
 # Referenced by Id Locator
 ReservationConfirmed_parkingAreaId_txt = parkingareaid
@@ -445,30 +446,30 @@ ReservationConfirmed_reservationFromTime_txt = reservationfromtime
 ReservationConfirmed_reservationTotime_txt = reservationtotime
 ReservationConfirmed_reservation_txt = reservation
 ReservationConfirmed_totalCost_txt = totalcost
-ReservationConfirmed_inputParkingName_txt = ip01
-ReservationConfirmed_inputParkingType_txt = ip02
-ReservationConfirmed_inputFloor_txt = ip03
-ReservationConfirmed_inputFromTime_txt = ip04
-ReservationConfirmed_inputToTime_txt = ip05
-ReservationConfirmed_options_txt = ip06
+inputParkingName_txt = ip01
+inputParkingType_txt = ip02
+inputFloor_txt = ip03
+inputFromTime_txt = ip04
+inputToTime_txt = ip05
+options_txt = ip06
 
 
 ################ reserveparkingspot.jsp Elements #########
 # Referenced by XPath Locator
-ReserveParkingSpot_Back_link = html/body/table/tbody/tr/td[1]/a
-ReserveParkingSpot_Logout_link = html/body/table/tbody/tr/td[2]/a
+ReserveParkingSpot_Back_link = html/body/a[1]
+ReserveParkingSpot_Logout_link = html/body/a[2]
 
 # Referenced by Id Locator
 ReserveParkingSpot_reservationId_txt = reservationid
 ReserveParkingSpot_username_txt = username
 ReserveParkingSpot_parkingareaid_txt = parkingareaid
-ReserveParkingSpot_parkingName_txt = ip01
-ReserveParkingSpot_type_txt = ip02
-ReserveParkingSpot_floor_txt = ip03
-ReserveParkingSpot_rservationfromtime_txt = ip04
-ReserveParkingSpot_rservationtotime_txt = ip05
-ReserveParkingSpot_selectedOptions_txt = ip06
-ReserveParkingSpot_totalCost_txt = ip07
+inputParkingName_txt = ip01
+inputParkingType_txt = ip02
+inputFloor_txt = ip03
+inputFromTime_txt = ip04
+inputToTime_txt = ip05
+options_txt = ip06
+totalCost_txt = ip07
 ReserveParkingSpot_cart_chckbox = selectedcart
 ReserveParkingSpot_camera_chckbox = selectedcamera
 ReserveParkingSpot_history_chckbox = selectedhistory
@@ -563,6 +564,12 @@ SearchParkingSpot_radioButton2 = radioButton2
 SearchParkingSpot_radioButton3 = radioButton3
 SearchParkingSpot_radioButton4 = radioButton4
 SearchParkingSpot_reserveButton_btn = reserveButton
+SearchParkingSpot_name1 = name1
+SearchParkingSpot_type1 = type1
+SearchParkingSpot_floor1 = floor1
+SearchParkingSpot_count1 = count1
+SearchParkingSpot_totalcost1 = totalcost1
+
 
 ############### student_faculty.jsp Elements #########
 # Referenced by XPath Locator
