add timer variable

--- a/properties/configuration.properties
+++ b/properties/configuration.properties
@@ -2,3 +2,4 @@ webBrowser=webdriver.firefox.marionette
 webDriverLocation=C:\\GeckoSelenium\\geckodriver.exe
 appUrl=http://localhost:8080/parkingManagement/index.jsp
 sharedUiMap=./properties/SharedUIMap.properties
+test_delay=delay
