--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -11,8 +11,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/selenium-server-standalone-3.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/easymock-3.4(1).jar"/>
-	<classpathentry kind="lib" path="C:/Users/J146851/Downloads/JUnitParams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kartik/Downloads/selenium-server-standalone-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kartik/Downloads/easymock-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kartik/Downloads/JUnitParams-1.0.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
