reservation with parameters

--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -549,6 +549,7 @@ SearchParkingSpot_username_txt = username
 SearchParkingSpot_parkingName_option = name
 SearchParkingSpot_parkingErr_txt = parkingErr
 SearchParkingSpot_type_option = type
+SearchParkingSpot_typeErr_option = typeErr
 SearchParkingSpot_fromTime_txt = reservationfrom
 SearchParkingSpot_toTime_txt = reservationto
 SearchParkingSpot_fromErr_txt = fromErr
