--- a/properties/SharedUIMap.properties
+++ b/properties/SharedUIMap.properties
@@ -79,7 +79,7 @@ Manager_MyProfile_link = html/body/a[1]
 Manage_ViewAvailableSpaces_link = html/body/a[2]
 Manager_ViewSpotDetails_link = html/body/a[3]
 Manager_SearchUser_link = html/body/a[4]
-Manager_ModifyDeleteReservation_link = html/body/a[5] 
+Manager_ModifyDeleteReservation_link = .//*[@id='modifyreservationForm']/a 
 Manager_AddModifyParkingArea_link = html/body/a[6] 
 Manager_Logout_link = html/body/a[7] 
 
@@ -166,6 +166,7 @@ DeleteReservation_search_username_txt = search_username
 DeleteReservation_usernameError_txt = usernameError
 DeleteReservation_SearchByUserName_btn = SearchByUserName
 DeleteReservation_reset_btn = reset
+DeleteReservation_noReservError_txt = AlertMsg
 
 ################ manager.jsp Elements #########
 
