--- a/Configuration/configuration.properties
+++ b/Configuration/configuration.properties
@@ -1,5 +1,5 @@
 webBrowser=webdriver.firefox.marionette
 webDriverLocation=C:\\GeckoSelenium\\geckodriver.exe
 appUrl=http://localhost:8080/parkingManagement/index.jsp
-sharedUiMap=./properties/SharedUIMap.properties
+sharedUiMap=./SharedUIMap/SharedUIMap.properties
 test_delay=delay
