--- a/SharedUIMap/SharedUIMap.properties
+++ b/SharedUIMap/SharedUIMap.properties
@@ -287,9 +287,9 @@ Myprofile_Firstname_txt = firstname
 Myprofile_FirstnameError_txt = firstNameError
 Myprofile_Lastname_txt = lastname
 Myprofile_LastnameError_txt = lastNameError
-Myprofile_UtaId_txt = utaid
+Myprofile_UtaId_txt = uta_id
 Myprofile_UtaIdError_txt = utaIdError
-Myprofile_EmailId_txt = emailid
+Myprofile_EmailId_txt = email
 Myprofile_EmailError_txt = emailError
 Myprofile_Phone_num = phone
 Myprofile_PhoneError_txt = phoneError
