tests for modify delete my parking reservation

--- a/SharedUIMap/SharedUIMap.properties
+++ b/SharedUIMap/SharedUIMap.properties
@@ -582,8 +582,8 @@ StudentFaculty_status_link = html/body/a[4]
 StudentFaculty_Logout_link = html/body/a[5]
 
 # Referenced by Id Locator
-StudentFaculty_viewReservation_link = viewReservationsForm
-StudentFaculty_cancelReservation_link = cancelreservationForm
+StudentFaculty_viewReservation_link = .//*[@id='viewReservationsForm']/a
+StudentFaculty_cancelReservation_link = .//*[@id='cancelreservationForm']/a
 
 ############### view_avail_spot.jsp Elements #########
 # Referenced by XPath Locator
