view my reserved spot selenium test

--- a/SharedUIMap/SharedUIMap.properties
+++ b/SharedUIMap/SharedUIMap.properties
@@ -642,6 +642,7 @@ ViewMyReservedSpots_Back_link = html/body/table/tbody/tr/td[1]/a
 ViewMyReservedSpots_Logout_link = html/body/table/tbody/tr/td[2]/a
 
 # Referenced by Id Locator
+ViewMyReservedSpots_error = alert
 ViewMyReservedSpots_resId_txt = resId
 ViewMyReservedSpots_parkingName_txt = parkingName
 ViewMyReservedSpots_type_txt = type
