Admin search,changerole,activate,revoke Manager search,noshow,overdue,violations

--- a/SharedUIMap/SharedUIMap.properties
+++ b/SharedUIMap/SharedUIMap.properties
@@ -55,6 +55,9 @@ ActivateUser_errordata_txt = errordata
 ActivateUser_successmsg_txt = successmsg
 ActivateUser_Activate_btn = Activate
 
+# Referenced by XPath Locator
+Search_user_Home_link = html/body/table/tbody/tr/td[1]/a
+
 ################ search_user.jsp Elements #########
 
 # Referenced by Id Locator
